idf_component_register(
    SRCS
        "main.c"
        "audio.c"
        "filesystems.c"
        "menu.c"
        "graphics_wrapper.c"
    INCLUDE_DIRS
        "."
        "include"
    EMBED_FILES
        ${project_dir}/resources/border.png
        ${project_dir}/resources/play.png
        ${project_dir}/resources/rom.png
        ${project_dir}/resources/save.png
        ${project_dir}/resources/load.png
        ${project_dir}/resources/state_save.png
        ${project_dir}/resources/state_load.png
        ${project_dir}/resources/joystick.png
)
